assets/css/style.css
@import url("reset.css");

body {
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;

  /* Typography */
  font-size: 18px;
  line-height: 34px;
  color: #777;

  /* Visual */
  background: url("../images/concrete_seamless.png");
}

* {
  /* Box-model */
  box-sizing: border-box;

  /* Positioning */
  margin: 0;
}

html,
body {
  height: 100%;
}

/* general */

.wrapper {
  height: auto !important;
  height: 100%;

  /* Box-model */
  min-height: 100%;

  /* Positioning */
  margin: 0 auto -100px;
}

.container {
  /* Box-model */
  width: 100%;
  max-width: 960px;

  /* Positioning */
  margin: 0 auto;
  clear: both;
}

h1,
h2,
h3,
p {
  margin-bottom: 20px;
}

p:last-child {
  margin-bottom: 0;
}

h1,
h2,
h3 {
  /* Typography */
  font-family: Georgia, Times, "Times New Roman", serif;
  font-weight: 700;
  color: #4aaaa5;
}

h1 {
  /* Box-model */
  padding-bottom: 20px;

  /* Typography */
  font-size: 30px;
  line-height: 49px;

  /* Visual */
  border-bottom: 3px solid #ddd;
}

h2,
h3 {
  font-size: 22px;
}

/* header */

#masthead {
  position: fixed;
  z-index: 99;

  /* Box-model */
  width: 100%;

  /* Positioning */
  margin: 0 0 30px;
  overflow: auto;

  /* Typography */
  color: #fff;
  background: #fff;

  /* Visual */
  border-bottom: 2px solid #ccc;
}

#logo {
  float: left;

  /* Box-model */
  width: 250px;
  height: 90px;

  /* Typography */
  font-family: Georgia, Times, "Times New Roman", serif;
  font-size: 30px;
  font-weight: 700;
  line-height: 90px;
  color: #fff;
  text-align: center;
  text-decoration: none;

  /* Visual */
  background: #4aaaa5;
}

nav {
  /* Box-model */
  float: right;

  /* Positioning */
  margin-top: 25px;
}

nav li {
  display: inline-block;

  /* Box-model */
  padding-left: 15px;

  /* Positioning */
  margin-left: 15px;

  /* Typography */
  line-height: 18px;

  /* Visual */
  border-left: 1px solid #efefef;
}

nav a {
  /* Typography */
  color: #999;
  text-decoration: none;
}

nav a:hover {
  color: #666;
}

nav li:first-child {
  /* Box-model */
  padding-left: 0;

  /* Positioning */
  margin-left: 0;

  /* Visual */
  border-left: 0 none;
}

/* footer */

footer,
.push {
  height: 100px;
}

footer {
  /* Box-model */
  padding: 30px 0;

  /* Positioning */
  clear: both;
  font-size: 12px;

  /* Typography */
  color: #ccc;
  text-align: center;

  /* Visual */
  background: #666;
  border-top: 8px solid #4aaaa5;
}

/* sidebar */

.sidebar {
  float: right;
  width: 100%;
  max-width: 270px;

  /* Box-model */
  padding: 30px;

  /* Positioning */
  margin-bottom: 20px;
  background: #fff;

  /* Visual */
  border: 1px solid #ddd;
}

h3,
.sidebar h2 {
  /* Box-model */
  padding-bottom: 20px;

  /* Positioning */
  margin-bottom: 15px;

  /* Typography */
  line-height: 22px;

  /* Visual */
  border-bottom: 2px solid #eee;
}

.sidebar li {
  /* Box-model */
  float: left;
  width: 62px;
  height: 62px;

  /* Positioning */
  margin-top: 8px;
  margin-right: 10px;
}

.sidebar img {
  max-width: 100%;
}

.sidebar li:last-child {
  margin-right: 0;
}

/* main */

main {
  padding-top: 130px;
}

.main-section {
  float: left;
  width: 100%;
  max-width: 650px;
  /* box-sizing: border-box; */

  /* Box-model */
  padding: 30px;

  /* Positioning */
  margin: 0 0 40px;
  background: #fff;

  /* Visual */
  border: 1px solid #ddd;
}

/* portfolio page */

.work {
  /* Positioning */
  position: relative;
  float: left;

  /* Box-model */
  width: 274px;
  margin: 20px 0 25px;
  overflow: auto;
}

.work:nth-child(even) {
  margin-right: 40px;
}

.work img {
  /* Box-model */
  width: 100%;

  /* Visual */
  border: 0 none;

  /* Misc */
  opacity: 0.8;
}

.work h3 {
  /* Positioning */
  position: absolute;
  bottom: 20px;
  width: 100%;

  /* Box-model */
  padding: 15px;
  margin-bottom: 0;
  font-weight: 300;
  line-height: 30px;

  /* Typography */

  color: #fff;
  text-align: center;
  background: #4aaaa5;

  /* Visual */
  border-bottom: 0;
}

.auth-image {
  float: left;

  /* Box-model */
  width: 200px;
  height: auto;
  margin-top: 10px;

  /* Positioning */
  margin-right: 25px;
}

/* contact page */

#contact-form ul {
  margin-bottom: 20px;
}

#contact-form li {
  margin-bottom: 10px;
}

label,
input[type=text],
input[type=email],
textarea {
  /* Box-model */
  display: block;
  width: 100%;
}

input[type=text],
input[type=email],
textarea {
  /* Box-model */
  height: 35px;
  padding: 0 10px;

  /* Typography */
  font-size: 14px;

  /* Visual */
  border: 1px solid #ddd;
}

textarea {
  height: 200px;
}

input[type=submit] {
  /* Box-model */
  padding: 10px 30px;
  font-size: 18px;

  /* Typography */
  color: #fff;

  /* Misc */
  cursor: pointer;
  background: #4aaaa5;

  /* Visual */
  border: 0 none;

}

@media screen and (max-width: 640px) {

  #logo {
    width: 100%;
    padding-top: 0px;
  }

  nav {
    float: none;
    text-align: center;
    margin-top: 0px;
    padding: 0px;
  }

  nav li {
    margin-top: 20px;
  }

  #masthead {
    height: 150px;
  }
.main-section {
  width: 90%;
  margin: 20px;
  margin-top: 30px;
}
.work {
  float: none;
  padding-right: none;
}
}

@media screen and (max-width: 768px) {

  #logo {
    margin-left: 20px;
  }
  
  nav {
    margin-right: 40px;
  }

  .main-section {
    width: 96%;
    float: none;
    margin: 20px 2% 20px 2%;
    /* margin-left: none; */
    max-width: 96%;
    
  }

  .container {
    max-width: 100%;
  }
  .work {
    float: none;
    padding-right: none;
  }

}

@media screen and (max-width: 980px) {

}

